# kavi

./: .gitignore  Cargo.toml  README.md
shaders/: Cargo.toml
shaders/.cargo/: config
shaders/src/: lib.rs
src/: gui.rs  lib.rs  lsp.rs  main.rs
src/gui/: input.rs  render.rs  types.rs  window.rs
src/gui/render/: backend.rs  glyph_atlas.rs
src/gui/render/backend/: vulkan.rs
src/gui/render/backend/vulkan/: buffer.rs  commands.rs  descriptors.rs  device.rs  image.rs  instance.rs  physical_device.rs  pipeline.rs  profiling.rs  surface.rs  swapchain.rs
src/lsp/: transport.rs  types.rs
