[package]
name = "kavi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
ash = "0.35.0"
ash-window = "0.9.0"
bdf = "0.6.0"
bitflags = "1.3.2"
crossbeam-channel = "0.5.2"
d3d12 = { version = "0.4.1", features = ["libloading"] }
log = "0.4.14"
lsp-types = "0.91.1"
oneshot = "0.1.3"
raw-window-handle = "0.4.2"
ropey = "1.3.2"
serde = "1.0.133"
serde_json = "1.0.74"

[dependencies.winapi]
version = "0.3.9"
features = ["minwindef", "libloaderapi", "winuser", "errhandlingapi", "dxgi1_6", "handleapi"]
